--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,21 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
 logging.level.com.nowcoder.community=debug
+
+# MailProperties
+#spring.mail.host=smtp.sina.com
+#spring.mail.port=465
+#spring.mail.username=opuntiaa@sina.com
+#spring.mail.password=04ce9703ae3fa0ff
+#spring.mail.protocol=smtps
+#spring.mail.properties.mail.smtp.ssl.enable=true
+# MailProperties
+spring.mail.host=smtp.sina.com
+#spring.mail.port=465
+spring.mail.username=opuntiaa@sina.com
+spring.mail.password=04ce9703ae3fa0ff
+#spring.mail.protocol=smtps
+#spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtl.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
